[gd_scene load_steps=4 format=3 uid="uid://dw0dkcnnguixm"]

[ext_resource type="Script" path="res://Scripts/StartButton.gd" id="1_ts1uy"]
[ext_resource type="Texture2D" uid="uid://bt5ep1pssp578" path="res://Sprites/StartButton/c8c3d173-f365-4076-b3fe-932a0f7b366d.png" id="2_b31yr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cxrm6"]
size = Vector2(55, 55)

[node name="StartButton" type="Area2D"]
texture_filter = 1
script = ExtResource("1_ts1uy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_b31yr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cxrm6")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
